[package]
name = "lightning-nodes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web  = "4"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest    = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.5", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite"
] }
chrono     = { version = "0.4", features = ["serde"] }
dotenvy     = "0.15"
anyhow = "1.0.98"
envy = "0.4.2"
async-trait = "0.1.88"
tokio-util = "0.7.15"
